--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <article class="product__card">
                         <div class="product__circle"></div>
 
-                        <img src="assets/img/product5.png" alt="" class="product__img5">
+                        <img src="assets/img/product5.png" alt="" class="product__img">
 
                         <h3 class="product__title"><strong>Sistemas de Injeção por Cardã</strong></h3>
                         <span class="product__price">Aulas práticas e ferramentas especificas. Apostilas e manuais completos incluídos no curso!</span>
