--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             </p>
                         </div>
 
-                        <a href="#" class="button--link button--flex">
+                        <a href="#products" class="button--link button--flex">
                             Saiba mais <i class="ri-arrow-right-down-line button__icon"></i>
                         </a>
                     </div>
