--- a/index.html
+++ b/index.html
@@ -442,7 +442,8 @@
                                 <br>
                                 <span class="contact__description">
                                     <i class="ri-whatsapp-fill"></i>
-                                    011 98847-6739
+                                         <a class="link__color" href="https://api.whatsapp.com/send?phone=5511988476739&text=Ol%C3%A1%2C%20desejo%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Radial%20Cursos!"> 
+                                             011 98847-6739 </a>
                                 </span>
                             </div>
 
